WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28844
V8 binding of WebSocket
https://bugs.webkit.org/show_bug.cgi?id=28844
Summary
V8 binding of WebSocket
Fumitoshi Ukai
Reported
2009-08-31 03:34:07 PDT
V8 binding of WebSocket API.
Attachments
V8 Bindings for WebSocket API
(17.13 KB, patch)
2009-09-01 02:25 PDT
,
Fumitoshi Ukai
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fumitoshi Ukai
Comment 1
2009-09-01 02:25:55 PDT
Created
attachment 38851
[details]
V8 Bindings for WebSocket API --- 10 files changed, 318 insertions(+), 1 deletions(-)
Adam Barth
Comment 2
2009-09-01 08:38:38 PDT
Comment on
attachment 38851
[details]
V8 Bindings for WebSocket API This looks good. I presume we already have LayoutTests from the JSC implementation? nit: In WebKit-land, we use FIXME instead of TODO. Also, is there a bug on file for Worker support for WebSockets?
Eric Seidel (no email)
Comment 3
2009-09-01 08:54:25 PDT
Comment on
attachment 38851
[details]
V8 Bindings for WebSocket API Rejecting patch 38851 from commit-queue. This patch will require manual commit. ['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1'] failed with exit code 1
Eric Seidel (no email)
Comment 4
2009-09-01 09:07:52 PDT
Comment on
attachment 38851
[details]
V8 Bindings for WebSocket API Rejecting patch 38851 from commit-queue. This patch will require manual commit. ['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1'] failed with exit code 1
Adam Barth
Comment 5
2009-09-01 09:39:24 PDT
Comment on
attachment 38851
[details]
V8 Bindings for WebSocket API Clearing flags on attachment: 38851 Committed
r47941
: <
http://trac.webkit.org/changeset/47941
>
Adam Barth
Comment 6
2009-09-01 09:39:31 PDT
All reviewed patches have been landed. Closing bug.
Eric Seidel (no email)
Comment 7
2009-09-01 16:16:30 PDT
media/video-source-add-src.html -> crashed The commit-queue hit
bug 28845
.
Eric Seidel (no email)
Comment 8
2009-09-01 16:18:26 PDT
Sorry. commit-queue failed because a layout test got left around from a previously failed patch: svg/dom/smil-methods.svg -> failed This type of error is tracked by
bug 28603
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug