2009-09-01  Fumitoshi Ukai  <ukai@chromium.org>

Reviewed by Adam Barth.

        V8 Bindings for WebSocket API.
        https://bugs.webkit.org/show_bug.cgi?id=28844

        * bindings/v8/DOMObjectsInclude.h:
        * bindings/v8/DerivedSourcesAllInOne.cpp:
        * bindings/v8/V8DOMWrapper.cpp:
        (WebCore::V8DOMWrapper::getTemplate):
        (WebCore::V8DOMWrapper::convertToV8Object):
        (WebCore::V8DOMWrapper::convertEventTargetToV8Object):
        * bindings/v8/V8DOMWrapper.h:
        * bindings/v8/V8Index.cpp:
        * bindings/v8/V8Index.h:
        * bindings/v8/WorkerContextExecutionProxy.cpp:
        * bindings/v8/custom/V8CustomBinding.h:
        * bindings/v8/custom/V8WebSocketCustom.cpp: Added.

Canonical link: https://commits.webkit.org/39517@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47941 268f45cc-cd09-0410-ab3c-d52691b4dbfc