WebCore/bindings/v8/V8DOMWrapper.cpp
@@ -457,6 +457,15 @@ v8::Persistent<v8::FunctionTemplate> V8DOMWrapper::getTemplate(V8ClassIndex::V8W
     case V8ClassIndex::WEBKITPOINT:
         descriptor->SetCallHandler(USE_CALLBACK(WebKitPointConstructor));
         break;
+#if ENABLE(WEB_SOCKETS)
+    case V8ClassIndex::WEBSOCKET: {
+        // Reserve one more internal field for keeping event listeners.
+        v8::Local<v8::ObjectTemplate> instanceTemplate = descriptor->InstanceTemplate();
+        instanceTemplate->SetInternalFieldCount(V8Custom::kWebSocketInternalFieldCount);
+        descriptor->SetCallHandler(USE_CALLBACK(WebSocketConstructor));
+        break;
+    }
+#endif
     case V8ClassIndex::XMLSERIALIZER:
         descriptor->SetCallHandler(USE_CALLBACK(XMLSerializerConstructor));
         break;
@@ -562,6 +571,7 @@ v8::Handle<v8::Value> V8DOMWrapper::convertToV8Object(V8ClassIndex::V8WrapperTyp
 
     // These objects can be constructed under WorkerContextExecutionProxy.  They need special
     // handling, since if we proceed below V8Proxy::retrieve() will get called and will crash.
+    // TODO(ukai): websocket?
     if ((type == V8ClassIndex::DOMCOREEXCEPTION
          || type == V8ClassIndex::RANGEEXCEPTION
          || type == V8ClassIndex::EVENTEXCEPTION
@@ -1267,6 +1277,12 @@ v8::Handle<v8::Value> V8DOMWrapper::convertEventTargetToV8Object(EventTarget* ta
     Notification* notification = target->toNotification();
     if (notification)
         return convertToV8Object(V8ClassIndex::NOTIFICATION, notification);
+#endif
+
+#if ENABLE(WEB_SOCKETS)
+    WebSocket* webSocket = target->toWebSocket();
+    if (webSocket)
+        return convertToV8Object(V8ClassIndex::WEBSOCKET, webSocket);
 #endif
 
     Node* node = target->toNode();
